--- a/app/styles/partials/_general.scss
+++ b/app/styles/partials/_general.scss
@@ -85,3 +85,21 @@ body {
     border-bottom: 0;
   }
 }
+
+
+
+//.logoMesh-control
+.logo-control {
+  position: absolute;
+  color: #fff;
+  z-index: 10;
+  top: 10px;
+  left: 10px;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 16px;
+  width: 200px;
+  .slider > input {
+    display: none;
+  }
+}
