--- a/app/styles/partials/_general.scss
+++ b/app/styles/partials/_general.scss
@@ -97,8 +97,26 @@ body {
   left: 10px;
   border-radius: 5px;
   background: rgba(0, 0, 0, 0.7);
-  padding: 16px;
+  padding: 16px 16px 32px;
   width: 200px;
+  .logo-control-toggle-button {
+    position: absolute;
+    top: 14px;
+    right: 18px;
+    background: none;
+    border: none;
+    padding: 0;
+    height: auto;
+    cursor: pointer;
+    color: #fff;
+    &:focus,&:hover,&:active {
+      outline: none;
+    }
+  }
+  .logo-control-inner {
+    display: none;
+    margin-bottom: -16px;
+  }
   .slider > input {
     display: none;
   }
